Change Log

-------V0.1-------

Added Ores