@@ -1,0 +1,20 @@
+package kwx.tek.item.ingots;
+
+import kwx.tek.lib.Reference;
+import kwx.tek.TekMain;
+import kwx.tek.item.ItemMain;
+import net.minecraft.client.renderer.texture.IconRegister;
+import net.minecraft.creativetab.CreativeTabs;
+import net.minecraft.item.Item;
+
+public class ItemCopperIngot extends ItemMain {
+
+	public ItemCopperIngot(int id) {
+		super(id);
+		this.setCreativeTab(TekMain.kwxCreativeTab);
+	}
+
+	public void registerIcons(IconRegister par1IconRegister) {
+        itemIcon = par1IconRegister.registerIcon(Reference.MOD_ID + ":" + this.getUnlocalizedName().substring(this.getUnlocalizedName().indexOf(".")+1));
+        }
+}
