@@ -2,8 +2,8 @@ package kwx.tek.lib;
 
 public class Reference {
 
-	public static final String MOD_NAME = "tek";
-	public static final String MOD_ID = "tek";
+	public static final String MOD_NAME = "Tek";
+	public static final String MOD_ID = "Tek";
 	public static final String MOD_VER = "0.1";
-	public static final String CHANNEL_NAME = "tek";
+	public static final String CHANNEL_NAME = "Tek";
 }
